footer fixed from session-layout.component.html

--- a/src/app/components/app-session-footer/app-session-footer.component.html
+++ b/src/app/components/app-session-footer/app-session-footer.component.html
@@ -1,5 +1,5 @@
-<footer class="session-footer">
-    <div class="container">
+<footer class="app-footer" style="margin-left: 0;">
+    <div class="container pt-3 pb-3">
         <a href="#">
             ITCG's Purchase System
         </a>© 2018 El nombre de nuestra enterprise asi bien perro
