--- a/src/app/containers/session-layout/session-layout.component.html
+++ b/src/app/containers/session-layout/session-layout.component.html
@@ -1,10 +1,9 @@
 <header class="app-header navbar"></header>
+    
     <div class="container">
         <router-outlet></router-outlet>
     </div>
 
-<!-- <app-session-footer></app-session-footer> -->
+<app-session-footer></app-session-footer>
 
-<footer class="app-footer" style="margin-right: 0; margin-left: 0;">
 
-</footer>
