--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -14,8 +14,14 @@
 }
 
 .read-only-normal-style {
-  background-color:white;
-  border-radius: 5px;
+  background-color:white !important;
+  border-radius: 5px !important;
+}
+
+.scrollable-div {
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 @import '~@swimlane/ngx-datatable/release/index.css';
