--- a/src/app/views/session/signin/signin.component.html
+++ b/src/app/views/session/signin/signin.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-6 offset-md-3">
         <div class="card">
-          <form novalidate [formGroup]="signinForm" (ngSubmit)="onSubmitProject(signinForm.value); signinForm.reset()">
+          <form novalidate [formGroup]="signinForm" (ngSubmit)="onSubmitSignin(signinForm.value); signinForm.reset()">
                 
             <div class="card-header">
               <h3 class="text-center">Formulario de registro</h3>
