--- a/src/app/views/warehouse/concept/components/concepts/concepts.component.html
+++ b/src/app/views/warehouse/concept/components/concepts/concepts.component.html
@@ -37,7 +37,7 @@
 
   <div class="col-md-12">
     <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
-      [rowHeight]="50" [scrollbarV]="true" [rows]='concepts'>
+      [rowHeight]="50" [scrollbarV]="true" [scrollbarH]="true" [rows]='concepts'>
       <!-- Row Detail Template -->
       <ngx-datatable-row-detail [rowHeight]="130" #myDetailRow (toggle)="onDetailToggle($event)">
         <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
@@ -92,7 +92,7 @@
 
       <ngx-datatable-column [minWidth]="250" name="Descripción de partida" prop="description" width="500">
         <ng-template let-value="value" ngx-datatable-cell-template>
-          <strong>{{ value }}</strong>
+          <div class="break-word"> {{ value }} </div>
         </ng-template>
       </ngx-datatable-column>
 
