--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -28,6 +28,20 @@
   height: auto !important;
   overflow-y: auto !important;
 }
+.break-word::-webkit-scrollbar
+{
+  width: 6px;
+  background-color: #F5F5F5;
+  border-radius: 15px;
+}
+
+.break-word::-webkit-scrollbar-thumb
+{
+  background-color: #F5F5F5;
+  border: 1px solid #cccaca;
+  border-radius: 15px;
+  width: 3px;
+}
 
 /* ngx-datatable END----- */
 
