--- a/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
+++ b/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
@@ -37,37 +37,33 @@
 
   <div class="col-md-12">
     <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
-      [rowHeight]="50" [scrollbarV]="true" [rows]='subdirections'>
+      [rowHeight]="60" [scrollbarV]="true" [rows]='subdirections'>
       <!-- Row Detail Template -->
-      <ngx-datatable-row-detail [rowHeight]="110" #myDetailRow (toggle)="onDetailToggle($event)">
+      <ngx-datatable-row-detail [rowHeight]="130" #myDetailRow (toggle)="onDetailToggle($event)">
         <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
 
-          <div class="container">
+          <div class="container scrollable-div">
             <div class="row">
 
               <div class="col-md-2">
                 <div class="form-group">
                   <label for="id" class="col-md-2 col-form-label">ID:</label>
-                  <ul class="list-group">
-                    <li class="list-group-item">{{ row.id }}</li>
-                  </ul>
+                    <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.id }}"/>
                 </div>
               </div>
         
               
               <div class="col-md-4">
-                <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
-                <ul class="list-group">
-                  <li class="list-group-item">{{ row.name }}</li>
-                </ul>
+                <div class="form-group">
+                  <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
+                  <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.name }}"/>
+                </div>
               </div>
                 
               <div class="col-md-4">
                 <div class="form-group">
                   <label for="jefe" class="col-md-2 col-form-label">Jefe de departamento:</label>
-                  <ul class="list-group">
-                    <li class="list-group-item">{{ row.boss_name }}</li>
-                  </ul>
+                  <input type='text' readonly class="form-control read-only-normal-style" value="{{ row.boss_name }}"/>
                 </div>
               </div>
     
