The table of actions now is observable.

--- a/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.html
+++ b/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.html
@@ -182,7 +182,7 @@
           [rowHeight]="50"
           [scrollbarV]="true"
           [scrollbarH]="true"
-          [rows]='actions'>
+          [rows]='actions$ | async'>
 
           <ngx-datatable-column [minWidth]="80" name="No. Acción" prop="action_number" width="80">
             <ng-template let-value="value" ngx-datatable-cell-template>
