--- a/src/app/views/warehouse/department/components/departments/departments.component.html
+++ b/src/app/views/warehouse/department/components/departments/departments.component.html
@@ -1,4 +1,5 @@
-<div class="container">  
+<div class="container"> 
+
     <div class="col-sm-12 col-md-12">
       <div class="card border-primary">
         <div class="card-header">
@@ -35,55 +36,48 @@
     </div>
     
     <div class="col-md-12">
-        <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="50" [scrollbarV]="true" [rows]='departments'>
+        <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" 
+        [rowHeight]="50" [scrollbarV]="true" [scrollbarH]="true" [rows]='departments'>
           <!-- Row Detail Template -->
           <ngx-datatable-row-detail [rowHeight]="200" #myDetailRow (toggle)="onDetailToggle($event)">
             <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
               
-              <div class="container">
+              <div class="container scrollable-div">
                 <div class="row">
     
                   <div class="col-md-2">
                     <div class="form-group">
                       <label for="id" class="col-md-2 col-form-label">ID:</label>
-                      <ul class="list-group">
-                        <li class="list-group-item">{{ row.id }}</li>
-                      </ul>
+                      <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.id }}">
                     </div>
                   </div>
             
                   
                   <div class="col-md-7">
                     <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
-                    <ul class="list-group">
-                      <li class="list-group-item">{{ row.name }}</li>
-                    </ul>
+                    <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.name }}">
                   </div>
                     
                   <div class="col-md-3">
                     <div class="form-group">
                       <label for="presupuesto" class="col-md-2 col-form-label">Presupuesto:</label>
-                      <ul class="list-group">
-                        <li class="list-group-item">{{ row.budget }}</li>
-                      </ul>
+                      <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.budget }}">
                     </div>
                   </div>
                 </div>
   
                 <div class="row">
-  
-                  <div class="col-md-6">
+
+                  <div class="col-md-4">
                     <div class="form-group">
                       <label for="jefe" class="col-md-2 col-form-label">Subdirección:</label>
-                      <ul class="list-group">
-                        <li class="list-group-item">{{ row.subdirection.name }}</li>
-                      </ul>
+                      <input type="text" readonly class="form-control read-only-normal-style" value="{{ row.subdirection.name }}">
                     </div>
                   </div>
         
                   <div class="col-md-2">
                     <div class="form-group">
-                      <ul class="list-group" style="margin-top: 35px;">
+                      <ul class="list-group" style="margin-top: 30px;">
                         <button class="btn btn-lg btn-link pull-right" [routerLink]="['../edit/', row.id]">Editar</button>
                       </ul>
                     </div>
@@ -108,28 +102,28 @@
         </ngx-datatable-column>
     
         <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-        <ngx-datatable-column [minWidth]="100" name="ID" prop="id" width="100">
+        <ngx-datatable-column [minWidth]="100" [maxWidth]="150" name="ID" prop="id" width="100">
           <ng-template let-value="value" ngx-datatable-cell-template>
             <strong>{{value}}</strong>
           </ng-template>
         </ngx-datatable-column>
     
         <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-        <ngx-datatable-column [minWidth]="250" name="Nombre" prop="name" width="250">
+        <ngx-datatable-column [minWidth]="180" name="Nombre" prop="name" width="180">
           <ng-template let-value="value" ngx-datatable-cell-template>
             <strong>{{value}}</strong>
           </ng-template>
         </ngx-datatable-column>
   
         <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-        <ngx-datatable-column [minWidth]="150" name="Presupuesto" prop="budget" width="150">
+        <ngx-datatable-column [minWidth]="150" [maxWidth]="200" name="Presupuesto" prop="budget" width="150">
           <ng-template let-value="value" ngx-datatable-cell-template>
             <strong>{{value}}</strong>
           </ng-template>
         </ngx-datatable-column>
 
         <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
-        <ngx-datatable-column [minWidth]="150" name="Subdirección" prop="subdirection.name" width="150">
+        <ngx-datatable-column [minWidth]="150" [maxWidth]="150" name="Subdirección" prop="subdirection.name" width="150">
             <ng-template let-value="value" ngx-datatable-cell-template>
               <strong>{{value}}</strong>
             </ng-template>
