--- a/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.scss
+++ b/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.scss
@@ -11,3 +11,9 @@
   border-radius: 0;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
+
+hr {
+  margin-top: -1rem;
+  margin-bottom: 1.5rem;
+
+}
