--- a/src/app/components/app-session-footer/app-session-footer.component.html
+++ b/src/app/components/app-session-footer/app-session-footer.component.html
@@ -1,4 +1,4 @@
-<footer class="app-footer" style="margin-left: 0;">
+<footer class="app-footer app-footer-fixed" style="margin-left: 0;">
     <div class="container pt-3 pb-3">
         <a href="#">
             ITCG's Purchase System
