--- a/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.html
+++ b/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.html
@@ -18,11 +18,7 @@
                           <input *ngIf="!(program && project && piidInput.value)" type="text" readonly class="form-control read-only-normal-style" value="00.0.0">
                           <div *ngIf="program && project && piidInput.value" class="fakeInput">
                               {{ project.project_number }}.{{ program.program_number }}.{{ piidInput.value }}
-                          </div>
-                          <!-- <input ngModel name="budget_key_id" #keyInput #key="ngModel" type="text" class="form-control" placeholder="00.0.0" required>                  
-                          <ul *ngIf="key.invalid && (key.dirty || key.touched)" class="alert alert-danger" style="margin-top: .5em">
-                              <li *ngIf="key.errors.required"> Debes ingresar una <strong>clave válida.</strong> </li>
-                          </ul> -->
+                          </div>                          
                         </div>
                       </div>
                     </div>
@@ -33,6 +29,7 @@
                           <input ngModel name="piid_ojectives" #piidInput #piid="ngModel" type="number" class="form-control" placeholder="Ingrese el objetivo PIID..." required min="00">
                           <ul *ngIf="piid.invalid && (piid.dirty || piid.touched)" class="alert alert-danger" style="margin-top: .5em">
                               <li *ngIf="piid.errors.minlength"> Debes ingresar un teléfono como mínimo de <strong> {{ phone.errors.minlength.requiredLength }} </strong> caracteres </li>
+                              <li *ngIf="piid.errors.required"> Debes ingresar un <strong>objetivo PIID.</strong> </li> 
                           </ul>
                         </div>
                       </div>
@@ -154,15 +151,11 @@
                       <div class="col-sm-12">
                         <div class="form-group">
                           <label for="description">Descripción</label>
-                          <textarea [(ngModel)]="actionDescription" name="description" #description="ngModel" class="form-control" rows="3" placeholder="Ingrese una descripción..." required minlength="5"></textarea>
-                          <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
-                              <li *ngIf="description.errors.required"> Debes ingresar una <strong>descripción</strong> </li>
-                              <li *ngIf="description.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ description.errors.minlength.requiredLength }} </strong> caracteres </li>
-                          </ul>
+                          <textarea [(ngModel)]="actionDescription" name="description" #descriptionInput #description="ngModel" class="form-control" rows="3" placeholder="Ingrese una descripción..."></textarea>
                         </div>
                       </div>
                     </div><!--/.row-->
-                    <button [disabled]="description.invalid" type="button" class="btn btn-outline-primary" (click)="onSubmitAddAction()"><i class="fa fa-check"></i>Agregar Acción</button>
+                    <button [disabled]="(description.invalid)" type="button" class="btn btn-outline-primary" (click)="onSubmitAddAction()"><i class="fa fa-check"></i>Agregar Acción</button>
                   </div>
         
                 </div>
@@ -199,12 +192,10 @@
           </div>
 
           <div class="card-footer text-right">
-            <button [disabled]="formBudgetKey.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i>Registrar</button>
+            <button [disabled]="(formBudgetKey.invalid || !actions.length)" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i>Registrar</button>
           </div>
         </form>
       </div>
-    </div><!--/.col-->
-    
-  </div><!-- row -->
-  
+    </div><!--/.col-->    
+  </div><!-- row -->  
 </div>
