hide sdebar after logout button

--- a/src/app/components/app-aside/app-aside.component.html
+++ b/src/app/components/app-aside/app-aside.component.html
@@ -21,7 +21,7 @@
                 <h6>Cuenta</h6>
                 <div class="aside-options">
                     <div class="clearfix mt-4">
-                        <button (click)="logout()" class="btn btn-primary btn-block">Cerrar Sesión</button>
+                        <button (click)="logout()" class="btn btn-primary btn-block" appAsideMenuToggler>Cerrar Sesión</button>
                     </div>
                 </div>
             </div>
