--- a/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.scss
+++ b/src/app/views/warehouse/budget-key/components/budget-key-create/budget-key-create.component.scss
@@ -15,5 +15,12 @@
 hr {
   margin-top: -1rem;
   margin-bottom: 1.5rem;
+}
 
+.fa-close {
+  color: red;
+  &:hover {
+    color: rgb(252, 89, 89);
+    cursor: pointer;
+  }
 }
